Ran conditionals notebook

--- a/Conditional Statements and Expressions.ipynb
+++ b/Conditional Statements and Expressions.ipynb
@@ -18,11 +18,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter an integer: 1\n",
+      "One\n",
+      "x =  1\n"
+     ]
+    }
+   ],
    "source": [
     "x = int(input(\"Please enter an integer: \"))\n",
     "\n",
@@ -54,11 +64,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Squeak!\n"
+     ]
+    }
+   ],
    "source": [
     "cat = False\n",
     "print(\"Meow!\") if cat else print(\"Squeak!\")"
@@ -124,11 +142,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Meow!\n"
+     ]
+    }
+   ],
    "source": [
     "cat = False\n",
     "print(\"Meow!\") if cat is not None else print(\"Squeak!\")"
