fixed missing word

--- a/Defining and Calling Functions.ipynb
+++ b/Defining and Calling Functions.ipynb
@@ -248,7 +248,7 @@
    "source": [
     "## `def function(*args, **kwargs):`\n",
     "\n",
-    "This pattern you to change functionality while avoiding breaking your code by checking if certain parameters exist.\n",
+    "This pattern allows you to change functionality while avoiding breaking your code by just checking the arguments if certain parameters exist and then adding a conditional statement based on that.\n",
     "\n",
     "Class methods that use this pattern allow data to be passed between objects without loss, transforming the data as needed without needing to know about other objects."
    ]
