--- a/Defining and Calling Functions.ipynb
+++ b/Defining and Calling Functions.ipynb
@@ -162,6 +162,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 1, 2, 3)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def foo(p, q, r=1, s=2):\n",
+    "    return p, q, r, s\n",
+    "\n",
+    "foo(0, 1, s=3, r=2)  # the order of defaulted arguments doesn't matter"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -246,11 +271,323 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `def function(*args, **kwargs):`\n",
+    "## Packing and Unpacking Arguments\n",
+    "\n",
+    "### `def function(*args, **kwargs):`\n",
     "\n",
     "This pattern allows you to change functionality while avoiding breaking your code by just checking the arguments if certain parameters exist and then adding a conditional statement based on that.\n",
     "\n",
-    "Class methods that use this pattern allow data to be passed between objects without loss, transforming the data as needed without needing to know about other objects."
+    "Class methods that use this pattern allow data to be passed between objects without loss, transforming the data as needed without needing to know about other objects.\n",
+    "\n",
+    "Let's look at more exmaples to illustrate the differences."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "greeting = 'hello'\n",
+    "\n",
+    "def echo(arg):\n",
+    "    return arg\n",
+    "\n",
+    "echo(greeting)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "echo() missing 1 required positional argument: 'arg'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-5ad9a7ba8251>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mecho\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# it's required\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: echo() missing 1 required positional argument: 'arg'"
+     ]
+    }
+   ],
+   "source": [
+    "echo()  # it's required..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('hello',)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "greeting = 'hello'\n",
+    "\n",
+    "def echo(*arg):\n",
+    "    return arg\n",
+    "\n",
+    "echo(greeting)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('h', 'e', 'l', 'l', 'o')"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "greeting = 'hello'\n",
+    "\n",
+    "def echo(*arg):\n",
+    "    return arg\n",
+    "\n",
+    "echo(*greeting)  # asterisk unpacks iterables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('hello',)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "greeting = ['hello']  # it's now a list\n",
+    "\n",
+    "def echo(*arg):\n",
+    "    return arg\n",
+    "\n",
+    "echo(*greeting)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('hello', 'hi', 'ohayou')"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "greeting = [\n",
+    "    'hello',\n",
+    "    'hi',\n",
+    "    'ohayou',\n",
+    "]\n",
+    "\n",
+    "def echo(*arg):\n",
+    "    return arg\n",
+    "\n",
+    "echo(*greeting)  # accepts lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "echo()  # still works!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's try it with keyword arguments."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'greeting1': 'Hello', 'greeting3': 'Ohayou', 'greeting2': 'Hi'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kwargs = {\n",
+    "    'greeting1': 'Hello',\n",
+    "    'greeting2': 'Hi',\n",
+    "    'greeting3': 'Ohayou',\n",
+    "}\n",
+    "\n",
+    "def echo(kwarg=None, **kwargs):\n",
+    "    print(kwarg)\n",
+    "    return kwargs\n",
+    "\n",
+    "echo(kwargs)  # the dictionary data type is unordered unlike lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'greeting1': 'Hello', 'greeting2': 'Hi', 'greeting3': 'Ohayou'}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "echo(**kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "World!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'greeting1': 'Hello', 'greeting2': 'Hi', 'greeting3': 'Ohayou'}"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kwargs = {\n",
+    "    'greeting1': 'Hello',\n",
+    "    'greeting2': 'Hi',\n",
+    "    'greeting3': 'Ohayou',\n",
+    "    'kwarg': 'World!',  # we have a default value for this, which is None\n",
+    "}\n",
+    "\n",
+    "def echo(kwarg=None, **kwargs):\n",
+    "    print(kwarg)\n",
+    "    return kwargs\n",
+    "\n",
+    "echo(**kwargs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The dictionary we passed was unpacked and considered as if it was a bunch of keyword arguments passed to the function.\n",
+    "\n",
+    "Notice how the keyword argument with a default value was overridden."
    ]
   }
  ],
