--- a/10. Defining and Calling Functions.ipynb
+++ b/10. Defining and Calling Functions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Functions\n",
+    "# 10.1 Defining a Function\n",
     "\n",
     "The keyword `def` introduces a [function definition](https://docs.python.org/3.5/tutorial/controlflow.html#defining-functions). It's followed by the function name, parenthesized list of formal parameters, and ends with a colon. The indented statements below it are executed with the function name is called."
    ]
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Positional Arguments\n",
+    "## 10.2 Positional Arguments\n",
     "\n",
     "The function requires a positional argument: 'n'. This is a good time to mention that naming things descriptively really helps. Coupled with Python's helpful error messages, descriptive variable, function, and class names make it easy to understand and debug errors. In this case, 'n' is a number. Specifically, this function returns a fibonacci sequence for as long as the numbers in the squence are less than the given max number.\n",
     "\n",
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Keyword Arguments\n",
+    "## 10.3 Keyword Arguments\n",
     "\n",
     "Arguments can be made optional when default values are provided. These are known as keyword arguments.\n",
     "\n",
@@ -128,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Argument Syntax\n",
+    "## 10.4 Argument Syntax\n",
     "\n",
     "There can be any number of positional arguments and any number of optional arguments. They can appear together in a function definition for as long as required positional arguments come before optional defaulted arguments."
    ]
@@ -179,7 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Starred Arguments\n",
+    "## 10.5 Starred Arguments\n",
     "\n",
     "In Python, there's a third way of passing arguments to a function. If you wanted to pass a list with an unknown length, even empty, you could pass them in starred arguments."
    ]
@@ -260,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Packing and Unpacking Arguments\n",
+    "## 10.6 Packing and Unpacking Arguments\n",
     "\n",
     "### `def function(*args, **kwargs):`\n",
     "\n",
