--- a/7. Loops and Iteration.ipynb
+++ b/7. Loops and Iteration.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Loops and Iteration\n",
-    "\n",
-    "There are two statements that let us do loops in Python: `while` and `for`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## While\n",
+    "## 7.1 While\n",
     "\n",
     "The [`while`](https://docs.python.org/3.5/reference/compound_stmts.html#while) statement will loop for as long as the condition is true."
    ]
@@ -36,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## For\n",
+    "## 7.2 For\n",
     "\n",
     "The [`for`](https://docs.python.org/3.5/tutorial/controlflow.html#for-statements) statement sequentially iterates over a list, string, set or any iterable."
    ]
@@ -59,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## range()\n",
+    "### 7.2.1 range()\n",
     "\n",
     "If you need to iterate over a sequence of numbers, the built-in function [`range()`](https://docs.python.org/3.5/library/stdtypes.html#range) can generate arithmetic progressions:"
    ]
@@ -120,16 +111,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [Continue and Break](https://docs.python.org/3.5/tutorial/controlflow.html#break-and-continue-statements-and-else-clauses-on-loops)\n",
+    "### 7.2.2 enumerate()\n",
     "\n",
-    "The `continue` and `break` statements let you have more control over loops."
+    "When looping through a sequence, the position index and corresponding value can be retrieved at the same time using the [`enumerate()`](https://docs.python.org/3.5/library/functions.html#enumerate) function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for index, value in enumerate(['tic', 'tac', 'toe']):\n",
+    "    print(index, value)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Continue\n",
+    "## 7.3 [Loop Control](https://docs.python.org/3.5/tutorial/controlflow.html#break-and-continue-statements-and-else-clauses-on-loops)\n",
+    "\n",
+    "The `continue` and `break` statements let you have more control over looping behavior."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7.3.1 Continue\n",
     "\n",
     "With `continue`, _the current iteration_ will no longer proceed and continues with the next iteration."
    ]
@@ -153,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Break\n",
+    "### 7.3.2 Break\n",
     "\n",
     "With `break`, the loops stops and _the rest of the iterations_ will no longer proceed."
    ]
@@ -177,7 +189,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [Else](https://docs.python.org/3.5/tutorial/controlflow.html#break-and-continue-statements-and-else-clauses-on-loops)\n",
+    "## 7.4 [Else](https://docs.python.org/3.5/tutorial/controlflow.html#break-and-continue-statements-and-else-clauses-on-loops)\n",
     "\n",
     "Loop statements may have an else clause which execute when the loop is not terminated by a break statement."
    ]
@@ -231,27 +243,6 @@
     "    x -= 1\n",
     "else:\n",
     "    print(\"else:\", x)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## enumerate()\n",
-    "\n",
-    "When looping through a sequence, the position index and corresponding value can be retrieved at the same time using the [`enumerate()`](https://docs.python.org/3.5/library/functions.html#enumerate) function."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "for index, value in enumerate(['tic', 'tac', 'toe']):\n",
-    "    print(index, value)"
    ]
   }
  ],
