--- a/8. Conditional Statements and Expressions.ipynb
+++ b/8. Conditional Statements and Expressions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# If\n",
+    "# 8.1 If... elif... else\n",
     "\n",
     "Python's [`if`](https://docs.python.org/3.5/reference/compound_stmts.html#if) keyword can be used as part of a statement or as part of an expression."
    ]
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Conditional statement](https://docs.python.org/3.5/tutorial/controlflow.html#if-statements):"
+    "## 8.1.1 [Conditional statement](https://docs.python.org/3.5/tutorial/controlflow.html#if-statements):"
    ]
   },
   {
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Conditional expression](https://docs.python.org/3.5/reference/expressions.html#conditional-expressions):"
+    "## 8.1.2 [Conditional expression](https://docs.python.org/3.5/reference/expressions.html#conditional-expressions):"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [Truth Value Testing](https://docs.python.org/3.5/library/stdtypes.html#truth-value-testing)\n",
+    "## 8.2 [Truth Value Testing](https://docs.python.org/3.5/library/stdtypes.html#truth-value-testing)\n",
     "\n",
     "Be aware that when checking for value, Python's various types have values equivalent to False:"
    ]
@@ -138,20 +138,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `is` vs `==`\n",
+    "## 8.3 `==` vs `is`, [`None`](https://docs.python.org/3.5/library/constants.html#None)\n",
     "\n",
     "`==` checks for value equality.\n",
     "\n",
-    "`is` checks for reference equality."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "## [`None`](https://docs.python.org/3.5/library/constants.html#None)\n",
+    "`is` checks for reference equality.\n",
     "\n",
     "Python's `None` is a constant singleton. New instances can't be created. It is a type on it's own - `NoneType` and we can't modify it in any way, for example, by adding or changing attributes or by assigning a new value to `None`.\n",
     "\n",
