--- a/9. Exception Handling.ipynb
+++ b/9. Exception Handling.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Try\n",
+    "## 9.1 Try\n",
     "\n",
     "Even if the syntax is correct, a line of code may still produce an error. It doesn't mean the code wouldn't work. Python's [`try`](https://docs.python.org/3.5/reference/compound_stmts.html#try) statement is used to handle [Exceptions](https://docs.python.org/3.5/reference/executionmodel.html#exceptions) detected during execution."
    ]
@@ -28,9 +28,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Except\n",
+    "## 9.2 Except\n",
     "\n",
-    "The `except` clause allows you to specify handlers for specific exceptions. Python has [built-in Exception classes](https://docs.python.org/3.5/library/exceptions.html#bltin-exceptions) that you can catch with `except`. Multiple except clauses can be used. New exceptions can even be created easily."
+    "The `except` clause allows you to specify exception handlers. Followed by an Exception class, it allows you to catch specific exceptions and control how each is handled. The exception class can be aliased using the `as` keyword followed by a variable for storage and use in the next block of statements.\n",
+    "\n",
+    "### 9.2.1 Exception Classes\n",
+    "\n",
+    "Python has [built-in Exception classes](https://docs.python.org/3.5/library/exceptions.html#bltin-exceptions) that you can catch with `except`. Multiple except clauses can be used. New exceptions can even be created easily."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 9.2.2 Raising Exceptions\n",
+    "\n",
+    "When errors occur, a `raise` statement can be used to halt the execution of the script. `raise` statements are followed by Exception classes. Exceptions can accept an argument that is displayed when the exception occurs. Usually, this is the aliased exception for feedback."
    ]
   },
   {
@@ -41,20 +54,27 @@
    },
    "outputs": [],
    "source": [
+    "class NotANumberException(Exception):\n",
+    "    pass\n",
+    "\n",
+    "\n",
     "while True:\n",
     "    try:\n",
     "        x = int(input(\"Please enter a number: \"))\n",
-    "    except ValueError:\n",
-    "        print(\"Oops! Not a valid number. Try again...\")\n",
+    "    except ValueError as e:\n",
+    "        raise NotANumberException(e)\n",
+    "        # raise NotANumberException(\"Not following directions\")\n",
     "    else:\n",
-    "        break"
+    "        break\n",
+    "    finally:\n",
+    "        print(\"Done...\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Else\n",
+    "## 9.3 Else\n",
     "\n",
     "The optional `else` clause executes if all the lines within the `try` clause execute without errors. Therefore, no exceptions occured. Being after the scope of the `try` statement, exceptions within the `else` clause are no longer handled by any `except` clause above it."
    ]
@@ -63,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Finally\n",
+    "## 9.4 Finally\n",
     "\n",
     "There is an optional `finally` statement that executes after handling `except` and `else` clauses. Exceptions not handled within any clauses are temporarily saved. The `finally` clause is executed before re-raising unhandled exceptions unless it executes a `return` or `break` statement."
    ]
