minor updates to 12, finishing 13

--- a/12. Basics of OOP in Python.ipynb
+++ b/12. Basics of OOP in Python.ipynb
@@ -6,7 +6,7 @@
     "collapsed": false
    },
    "source": [
-    "# 12.1 Python Classes and Objects\n",
+    "# 12 Python Classes and Objects\n",
     "\n",
     "The keyword `class` introduces a class definition. It's followed by the class name, then usually a parenthesized list of derived class/es, and ends with a colon. The indented statements below it constitute the class' attributes.\n",
     "\n",
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 12.1 Creating a Class\n",
+    "## 12.1 Defining a Class\n",
     "\n",
     "Python classes inherit from the built-in `object`.\n",
     "\n",
