--- a/13. Importing Modules.ipynb
+++ b/13. Importing Modules.ipynb
@@ -202,36 +202,14 @@
    },
    "outputs": [],
    "source": [
-    "environ[\"NOTEBOOK_DIRECTORY\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
     "environ.pop(\"NOTEBOOK_DIRECTORY\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "environ[\"NOTEBOOK_DIRECTORY\"]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`os.environ` returns a [mapping type](https://docs.python.org/3.5/glossary.html#term-mapping) object that works similar to a dictionary."
+    "`os.environ` returns a [mapping type](https://docs.python.org/3.5/glossary.html#term-mapping) object that works similar to a dictionary. Let's see if manipulating it like a dictionary works."
    ]
   },
   {
@@ -249,17 +227,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "environ[\"NOTEBOOK\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "collapsed": true
    },
    "outputs": [],
@@ -268,27 +235,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "environ[\"NOTEBOOK\"]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 13.1.2 Packages\n",
     "\n",
-    "It also works with local packages but there's one thing to add - the [`__init__.py`](https://docs.python.org/3.5/tutorial/modules.html#packages) file.\n",
+    "Import also works with local packages but there's one requirement - the [`__init__.py`](https://docs.python.org/3.5/tutorial/modules.html#packages) file.\n",
     "\n",
     "> The `__init__.py` files are required to make Python treat the directories as containing packages; this is done to prevent directories with a common name, such as string, from unintentionally hiding valid modules that occur later on the module search path. In the simplest case, `__init__.py` can just be an empty file, but it can also execute initialization code for the package or...\n",
     "\n",
-    "And to use this in code, the \"dotted name\" is used.\n",
+    "And to use this in code, the \"**dotted name**\" is used.\n",
     "\n",
     "![Folder image](./Images/folder.png)"
    ]
@@ -301,18 +257,22 @@
    },
    "outputs": [],
    "source": [
-    "import folder"
+    "import folder\n",
+    "# folder.module.function\n",
+    "# folder.module.Class"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from folder import module"
+    "from folder import module\n",
+    "# module.function\n",
+    "# module.Class"
    ]
   },
   {
@@ -336,6 +296,238 @@
    "source": [
     "from folder.module import Class"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 13.2 Common Modules\n",
+    "\n",
+    "Let's try more Python modules to give you a better idea about what you can do. We'll look at random and datetime. Then we'll look at modules related to the web, json and requests, with the latter being a 3rd party module used for http requests."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 13.2.2 `random`\n",
+    "\n",
+    "[random.randrange()](https://docs.python.org/3.5/library/random.html#random.randrange)\n",
+    "\n",
+    "[random.choice()](https://docs.python.org/3.5/library/random.html#random.choice)\n",
+    "    \n",
+    "[random.random()](https://docs.python.org/3.5/library/random.html#random.random)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# try some of the methods above\n",
+    "# feel free to explore while reading the documentation\n",
+    "random"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 13.2.1 `datetime`\n",
+    "\n",
+    "[datetime.datetime](https://docs.python.org/3.5/library/datetime.html)\n",
+    "\n",
+    "Attributes: year, month, day, hour, minute, second, microsecond, and tzinfo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "now = datetime.now()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# try some of now's attributes, better yet, use introspection and explore\n",
+    "now"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 13.2.3 `json`\n",
+    "\n",
+    "[json.dumps](https://docs.python.org/3.5/library/json.html#json.dumps)\n",
+    "\n",
+    "[json.loads](https://docs.python.org/3.5/library/json.html#json.dumps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "dictionary = {\n",
+    "    'key1': 'value1',\n",
+    "    'key2': 'value2',\n",
+    "    'key3': 'value3',\n",
+    "    'key4': 'value4',\n",
+    "    'key5': 'value5',\n",
+    "    'key6': 'value6',\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# you can dump a dictionary to json.dumps and it's converted into a json string\n",
+    "data = json.dumps(dictionary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# it's a valid json string\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# you can load json strings into json.loads and it's converted into a dictionary\n",
+    "json.loads(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 13.2.4 [`requests`](http://docs.python-requests.org/en/latest/user/quickstart/)\n",
+    "\n",
+    "requests.get"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# let's make sure you have the module\n",
+    "! pip install requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "request = requests.get('http://127.0.0.1:8888') or requests.get('http://127.0.0.1:8889')  # just in case"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "request.url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "request.status_code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print(request.content.decode('utf8'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
