--- a/13. Importing Modules.ipynb
+++ b/13. Importing Modules.ipynb
@@ -238,7 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 13.1.2 Packages\n",
+    "## 13.1.2 Local Packages\n",
     "\n",
     "Import also works with local packages but there's one requirement - the [`__init__.py`](https://docs.python.org/3.5/tutorial/modules.html#packages) file.\n",
     "\n",
@@ -247,6 +247,352 @@
     "And to use this in code, the \"**dotted name**\" is used.\n",
     "\n",
     "![Folder image](./Images/folder.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 13.1.3 [Aliasing](https://www.python.org/dev/peps/pep-0221/)\n",
+    "\n",
+    "Aside from allowing us to use external code from modules, `import` also binds the module to a name in the local scope. Modules have the possibility of having the same name so is it possible to import modules with the same name?\n",
+    "\n",
+    "Modules can't share the same name in the local scope but they can be bound to an alias. For example, if we needed to import `path` from `os` (`os.path`) and `sys` (`sys.path`), Python lets us assign imports to an alias using the `as` keyword.\n",
+    "\n",
+    "```\n",
+    "import numpy as np\n",
+    "```\n",
+    "\n",
+    "The `as` keyword can be used in with any single import."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 13.1.4 [Multiple Imports](https://www.python.org/dev/peps/pep-0328/)\n",
+    "\n",
+    "If you had to import multiple times from a single module, that can also be done in one line with the syntax:\n",
+    "\n",
+    "```\n",
+    "from os import environ, path\n",
+    "```\n",
+    "\n",
+    "Lines can be broken in Python by putting a backslash `\\ ` at the end of a line and the code can continue on the next line with indentation:\n",
+    "\n",
+    "```\n",
+    "from os import environ, kill, path, urandom, wait, \\\n",
+    "     walk, ...\n",
+    "```\n",
+    "\n",
+    "The same can be achieved by enclosing them in a parenthesis, the standard grouping mechanism in Python. This is the recommended way to import when it reaches multiple lines:\n",
+    "\n",
+    "```\n",
+    "from os import (environ, kill, path, urandom, wait,\n",
+    "     walk, ...)\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['CLD_CONTINUED',\n",
+       " 'CLD_DUMPED',\n",
+       " 'CLD_EXITED',\n",
+       " 'CLD_TRAPPED',\n",
+       " 'EX_CANTCREAT',\n",
+       " 'EX_CONFIG',\n",
+       " 'EX_DATAERR',\n",
+       " 'EX_IOERR',\n",
+       " 'EX_NOHOST',\n",
+       " 'EX_NOINPUT',\n",
+       " 'EX_NOPERM',\n",
+       " 'EX_NOUSER',\n",
+       " 'EX_OK',\n",
+       " 'EX_OSERR',\n",
+       " 'EX_OSFILE',\n",
+       " 'EX_PROTOCOL',\n",
+       " 'EX_SOFTWARE',\n",
+       " 'EX_TEMPFAIL',\n",
+       " 'EX_UNAVAILABLE',\n",
+       " 'EX_USAGE',\n",
+       " 'F_LOCK',\n",
+       " 'F_OK',\n",
+       " 'F_TEST',\n",
+       " 'F_TLOCK',\n",
+       " 'F_ULOCK',\n",
+       " 'MutableMapping',\n",
+       " 'NGROUPS_MAX',\n",
+       " 'O_ACCMODE',\n",
+       " 'O_APPEND',\n",
+       " 'O_ASYNC',\n",
+       " 'O_CREAT',\n",
+       " 'O_DIRECTORY',\n",
+       " 'O_EXCL',\n",
+       " 'O_EXLOCK',\n",
+       " 'O_NDELAY',\n",
+       " 'O_NOCTTY',\n",
+       " 'O_NOFOLLOW',\n",
+       " 'O_NONBLOCK',\n",
+       " 'O_RDONLY',\n",
+       " 'O_RDWR',\n",
+       " 'O_SHLOCK',\n",
+       " 'O_SYNC',\n",
+       " 'O_TRUNC',\n",
+       " 'O_WRONLY',\n",
+       " 'PRIO_PGRP',\n",
+       " 'PRIO_PROCESS',\n",
+       " 'PRIO_USER',\n",
+       " 'P_ALL',\n",
+       " 'P_NOWAIT',\n",
+       " 'P_NOWAITO',\n",
+       " 'P_PGID',\n",
+       " 'P_PID',\n",
+       " 'P_WAIT',\n",
+       " 'RTLD_GLOBAL',\n",
+       " 'RTLD_LAZY',\n",
+       " 'RTLD_LOCAL',\n",
+       " 'RTLD_NODELETE',\n",
+       " 'RTLD_NOLOAD',\n",
+       " 'RTLD_NOW',\n",
+       " 'R_OK',\n",
+       " 'SCHED_FIFO',\n",
+       " 'SCHED_OTHER',\n",
+       " 'SCHED_RR',\n",
+       " 'SEEK_CUR',\n",
+       " 'SEEK_END',\n",
+       " 'SEEK_SET',\n",
+       " 'ST_NOSUID',\n",
+       " 'ST_RDONLY',\n",
+       " 'TMP_MAX',\n",
+       " 'WCONTINUED',\n",
+       " 'WCOREDUMP',\n",
+       " 'WEXITED',\n",
+       " 'WEXITSTATUS',\n",
+       " 'WIFCONTINUED',\n",
+       " 'WIFEXITED',\n",
+       " 'WIFSIGNALED',\n",
+       " 'WIFSTOPPED',\n",
+       " 'WNOHANG',\n",
+       " 'WNOWAIT',\n",
+       " 'WSTOPPED',\n",
+       " 'WSTOPSIG',\n",
+       " 'WTERMSIG',\n",
+       " 'WUNTRACED',\n",
+       " 'W_OK',\n",
+       " 'X_OK',\n",
+       " '_Environ',\n",
+       " '__all__',\n",
+       " '__builtins__',\n",
+       " '__cached__',\n",
+       " '__doc__',\n",
+       " '__file__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " '_execvpe',\n",
+       " '_exists',\n",
+       " '_exit',\n",
+       " '_get_exports_list',\n",
+       " '_putenv',\n",
+       " '_spawnvef',\n",
+       " '_unsetenv',\n",
+       " '_wrap_close',\n",
+       " 'abort',\n",
+       " 'access',\n",
+       " 'altsep',\n",
+       " 'chdir',\n",
+       " 'chflags',\n",
+       " 'chmod',\n",
+       " 'chown',\n",
+       " 'chroot',\n",
+       " 'close',\n",
+       " 'closerange',\n",
+       " 'confstr',\n",
+       " 'confstr_names',\n",
+       " 'cpu_count',\n",
+       " 'ctermid',\n",
+       " 'curdir',\n",
+       " 'defpath',\n",
+       " 'device_encoding',\n",
+       " 'devnull',\n",
+       " 'dup',\n",
+       " 'dup2',\n",
+       " 'environ',\n",
+       " 'environb',\n",
+       " 'errno',\n",
+       " 'error',\n",
+       " 'execl',\n",
+       " 'execle',\n",
+       " 'execlp',\n",
+       " 'execlpe',\n",
+       " 'execv',\n",
+       " 'execve',\n",
+       " 'execvp',\n",
+       " 'execvpe',\n",
+       " 'extsep',\n",
+       " 'fchdir',\n",
+       " 'fchmod',\n",
+       " 'fchown',\n",
+       " 'fdopen',\n",
+       " 'fork',\n",
+       " 'forkpty',\n",
+       " 'fpathconf',\n",
+       " 'fsdecode',\n",
+       " 'fsencode',\n",
+       " 'fstat',\n",
+       " 'fstatvfs',\n",
+       " 'fsync',\n",
+       " 'ftruncate',\n",
+       " 'get_blocking',\n",
+       " 'get_exec_path',\n",
+       " 'get_inheritable',\n",
+       " 'get_terminal_size',\n",
+       " 'getcwd',\n",
+       " 'getcwdb',\n",
+       " 'getegid',\n",
+       " 'getenv',\n",
+       " 'getenvb',\n",
+       " 'geteuid',\n",
+       " 'getgid',\n",
+       " 'getgrouplist',\n",
+       " 'getgroups',\n",
+       " 'getloadavg',\n",
+       " 'getlogin',\n",
+       " 'getpgid',\n",
+       " 'getpgrp',\n",
+       " 'getpid',\n",
+       " 'getppid',\n",
+       " 'getpriority',\n",
+       " 'getsid',\n",
+       " 'getuid',\n",
+       " 'initgroups',\n",
+       " 'isatty',\n",
+       " 'kill',\n",
+       " 'killpg',\n",
+       " 'lchflags',\n",
+       " 'lchmod',\n",
+       " 'lchown',\n",
+       " 'linesep',\n",
+       " 'link',\n",
+       " 'listdir',\n",
+       " 'lockf',\n",
+       " 'lseek',\n",
+       " 'lstat',\n",
+       " 'major',\n",
+       " 'makedev',\n",
+       " 'makedirs',\n",
+       " 'minor',\n",
+       " 'mkdir',\n",
+       " 'mkfifo',\n",
+       " 'mknod',\n",
+       " 'name',\n",
+       " 'nice',\n",
+       " 'open',\n",
+       " 'openpty',\n",
+       " 'pardir',\n",
+       " 'path',\n",
+       " 'pathconf',\n",
+       " 'pathconf_names',\n",
+       " 'pathsep',\n",
+       " 'pipe',\n",
+       " 'popen',\n",
+       " 'pread',\n",
+       " 'putenv',\n",
+       " 'pwrite',\n",
+       " 'read',\n",
+       " 'readlink',\n",
+       " 'readv',\n",
+       " 'remove',\n",
+       " 'removedirs',\n",
+       " 'rename',\n",
+       " 'renames',\n",
+       " 'replace',\n",
+       " 'rmdir',\n",
+       " 'scandir',\n",
+       " 'sched_get_priority_max',\n",
+       " 'sched_get_priority_min',\n",
+       " 'sched_yield',\n",
+       " 'sendfile',\n",
+       " 'sep',\n",
+       " 'set_blocking',\n",
+       " 'set_inheritable',\n",
+       " 'setegid',\n",
+       " 'seteuid',\n",
+       " 'setgid',\n",
+       " 'setgroups',\n",
+       " 'setpgid',\n",
+       " 'setpgrp',\n",
+       " 'setpriority',\n",
+       " 'setregid',\n",
+       " 'setreuid',\n",
+       " 'setsid',\n",
+       " 'setuid',\n",
+       " 'spawnl',\n",
+       " 'spawnle',\n",
+       " 'spawnlp',\n",
+       " 'spawnlpe',\n",
+       " 'spawnv',\n",
+       " 'spawnve',\n",
+       " 'spawnvp',\n",
+       " 'spawnvpe',\n",
+       " 'st',\n",
+       " 'stat',\n",
+       " 'stat_float_times',\n",
+       " 'stat_result',\n",
+       " 'statvfs',\n",
+       " 'statvfs_result',\n",
+       " 'strerror',\n",
+       " 'supports_bytes_environ',\n",
+       " 'supports_dir_fd',\n",
+       " 'supports_effective_ids',\n",
+       " 'supports_fd',\n",
+       " 'supports_follow_symlinks',\n",
+       " 'symlink',\n",
+       " 'sync',\n",
+       " 'sys',\n",
+       " 'sysconf',\n",
+       " 'sysconf_names',\n",
+       " 'system',\n",
+       " 'tcgetpgrp',\n",
+       " 'tcsetpgrp',\n",
+       " 'terminal_size',\n",
+       " 'times',\n",
+       " 'times_result',\n",
+       " 'truncate',\n",
+       " 'ttyname',\n",
+       " 'umask',\n",
+       " 'uname',\n",
+       " 'uname_result',\n",
+       " 'unlink',\n",
+       " 'unsetenv',\n",
+       " 'urandom',\n",
+       " 'utime',\n",
+       " 'wait',\n",
+       " 'wait3',\n",
+       " 'wait4',\n",
+       " 'waitpid',\n",
+       " 'walk',\n",
+       " 'write',\n",
+       " 'writev']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "dir(os)"
    ]
   },
   {
@@ -519,15 +865,6 @@
    "source": [
     "print(request.content.decode('utf8'))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
