added note on aliasing import *

--- a/13. Importing Modules.ipynb
+++ b/13. Importing Modules.ipynb
@@ -263,7 +263,7 @@
     "import numpy as np\n",
     "```\n",
     "\n",
-    "The `as` keyword can be used in with any single import."
+    "The `as` keyword can be used in with any single import. It does not work on `import *`."
    ]
   },
   {
