added exercises to oop

--- a/12. Basics of OOP in Python.ipynb
+++ b/12. Basics of OOP in Python.ipynb
@@ -55,6 +55,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# create a class, with an is_active method that returns True.\n",
+    "# instantiate it and access the is_active method\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -170,6 +186,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# create a new class and make sure to add a docstring to it\n",
+    "# add a docstring to this class as well as any methods you may have added\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -264,9 +296,9 @@
    "source": [
     "### 12.3.2 `__init__`\n",
     "\n",
-    "Sometimes we want our instances to do something on instantiation. It may be anything from processing data, calling functions or accepting arguments. Modifying __init__ allows us to do exactly this.\n",
+    "Sometimes we want our instances to do something on instantiation. It may be anything from processing data, calling functions or accepting arguments. Modifying `__init__` allows us to do exactly this.\n",
     "\n",
-    "Let's recreate MyClass and modify __init__."
+    "Let's recreate MyClass and modify `__init__`."
    ]
   },
   {
@@ -318,6 +350,24 @@
     "The `__init__` method executes on initialization (hence, _init_). Any block of code defined here gets executed first. If we want to pass parameters while instantiating our object, it goes in here. This is what the `*args` and `**kwargs` in `__init__` are for. We saw this pattern on the notebook about functions.\n",
     "\n",
     "It's up to you to research and learn about the others by reading documentation and through research but these are the most commonly used."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# create a class and override the __init__ and __str__ methods\n",
+    "# the class should accept one argument\n",
+    "# whenever an object of this class is printed, it should print the time it was instantiated\n",
+    "# as well as any argument passed to it during instantiation\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -417,6 +467,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# define a FatherClass with a can_sing method that returns True\n",
+    "# and a MotherClass with a can_dance method that returns True\n",
+    "# define a KLabEmployeeClass inheriting from both FatherClass and MotherClass\n",
+    "# it should have a can_sing_and_dance method that returns true if self.can_sing and self.can_dance returns True\n",
+    "# we'll use these classes in the next exercise\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -465,7 +544,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The super() function is not restricted to your current object. You can select which object's parent method you want to run. In the next example, note how we are using super on the object we are inheriting from."
+    "The super() function is not restricted to your current object. You can use super on any of your object's parents or derived classes and on their methods. In the next example, note how we are using super on the object we are inheriting from."
    ]
   },
   {
@@ -515,6 +594,37 @@
    "metadata": {},
    "source": [
     "The result of the inherited method was assiged to a variable. We then returned the variable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# we need to modify our FatherClass and KLabEmployeeClass\n",
+    "\n",
+    "# modify the FatherClass.can_sing() method by printing \"bow\" after singing\n",
+    "\n",
+    "# add a location attribute to KLabEmployeeClass with a default value of None\n",
+    "# modify its can_sing method to check first if the location is 'home',\n",
+    "# if so, proceed with its inherited method, otherwise, return False\n",
+    "# (should also print bow at the end of song but without rewriting the method... use super)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -624,7 +734,51 @@
     "        return super().__init__(self, *args, **kwargs)\n",
     "\n",
     "for cls in [ExampleObject, ExampleBackupObject, AlternateExampleBackupObject, NewInitExampleObject]:\n",
-    "    cls()"
+    "    cls()  # instantiate each object in our list of objects so we see what they do"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# create a shape interface class that as a perimeter method\n",
+    "# create various shape classes that inherit from our shape interface\n",
+    "# they should each implement the perimeter method by calculating from their shape attributes\n",
+    "# shape classes can accept any keyword arguments but can only calculate from valid attributes with numerical values:\n",
+    "# square = side\n",
+    "# rectangle = length, width\n",
+    "# triangle = a, b, c\n",
+    "# circle = radius\n",
+    "# circle should print a deprecation warning for perimeter and recommend the circumference method\n",
+    "# the circumference method should implement the calculation\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
