--- a/13. Importing Modules.ipynb
+++ b/13. Importing Modules.ipynb
@@ -528,7 +528,7 @@
    },
    "outputs": [],
    "source": [
-    "request = requests.get('http://127.0.0.1:8888') or requests.get('http://127.0.0.1:8889')  # just in case"
+    "request = requests.get('http://127.0.0.1:8888') or requests.get('http://127.0.0.1:8889')  # your local jupyter server"
    ]
   },
   {
@@ -563,6 +563,32 @@
    "source": [
     "print(request.content.decode('utf8'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# try to use requests.get on another site and see the result\n",
+    "import requests\n",
+    "\n",
+    "url = 'https://tumblr.com'\n",
+    "r = requests.get(url)\n",
+    "\n",
+    "print(r.content.decode('utf8'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
