Updated img scr

--- a/Beginner_2/5. Built-in Functions.ipynb
+++ b/Beginner_2/5. Built-in Functions.ipynb
@@ -285,9 +285,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"http://localhost:8888/files/Images/img_datatype_conversion_1.png\">\n",
-    "<img src=\"http://localhost:8888/files/Images/img_datatype_conversion_2.png\">    "
+    "\n",
+    "<img src=\"./Images/img_datatype_conversion_1.png\">\n",
+    "<img src=\"./Images/img_datatype_conversion_2.png\">    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
