Updated image to markdown

--- a/Beginner_2/5. Built-in Functions.ipynb
+++ b/Beginner_2/5. Built-in Functions.ipynb
@@ -285,19 +285,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "<img src=\"./images/img_datatype_conversion_1.png\">\n",
-    "<img src=\"./images/img_datatype_conversion_2.png\">    "
+    "![Beginner_2](./images/img_datatype_conversion_1.png)\n",
+    "![Beginner_2](./images/img_datatype_conversion_2.png)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
