Reset kernel and updated the image markdown

--- a/Beginner_2/6.1 Built-in Standard Data Types - Variables.ipynb
+++ b/Beginner_2/6.1 Built-in Standard Data Types - Variables.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -214,8 +214,7 @@
     "Comparisons can be chained arbitrarily, e.g., <b>`x < y <= z`</b> is equivalent to <b>`x < y`</b> and <b>`y <= z`</b>, except that <b>`y`</b> is evaluated only once (but in both cases <b>`z`</b> is not evaluated at all when <b>`x < y`</b> is found to be false).\n",
     "\n",
     "\n",
-    "\n",
-    "<img src=\"http://localhost:8888/files/Images/img_comparison_chaining.png\">"
+    "![Beginner_2](./images/img_comparison_chaining.png)"
    ]
   },
   {
@@ -227,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -288,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -317,7 +316,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"http://localhost:8888/files/Images/img_numeric_types.png\">\n",
+    "![Beginner_2](./images/img_numeric_types.png)\n",
     "\n",
     "- Python allows you to use a lowercase L with long, but it is recommended that you use only an uppercase L to avoid confusion with the number 1. Python displays long integers with an uppercase L.\n",
     "\n",
@@ -347,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -375,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -388,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -459,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -618,15 +617,6 @@
    "source": [
     "  "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
