--- a/Beginner_2/6.3 Built-in Standard Data Types - Numbers.ipynb
+++ b/Beginner_2/6.3 Built-in Standard Data Types - Numbers.ipynb
@@ -70,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"http://localhost:8888/files/Images/img_numeric_types.png\">"
+    "![Beginner_2](./images/img_numeric_types.png)"
    ]
   },
   {
