--- a/Beginner_2/6.4 Built-in Standard Data Types - Strings.ipynb
+++ b/Beginner_2/6.4 Built-in Standard Data Types - Strings.ipynb
@@ -90,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.4.1 Escape characters\n",
+    "## 6.4.2 Escape characters\n",
     "\n",
     "This <b>`\\`</b> (backslash) character, as seen on the previous example, is used to escape characters that otherwise have a special meaning, such as newline, backslash itself, or the quote character.\n",
     "\n",
@@ -113,45 +113,78 @@
     "# Now to check the results! Run the code.\n",
     "\n",
     "print(escape_1)\n",
-    "print(escape_2)\n"
+    "print(escape_2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The second way is by using triple-quotes, which is just \"\"\" and works like a string, but you also can put as many lines of text as you want until you type \"\"\" again. We'll also play with these:"
+    "#### Escape Sequences\n",
+    "\n",
+    "These are the escape sequences Python supports:\n",
+    "\n",
+    "![Beginner_2](./images/img_escape_characters.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here are some examples. Run the code to see the result:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\tI'm tabbed in.\n",
-      "I'm split\n",
-      "on a line.\n",
-      "I'm \\ a \\ cat.\n",
-      "\n",
-      "I'll do a list:\n",
-      "\t* Cat food\n",
-      "\t* Fishies\n",
-      "\t* Catnip\n",
-      "\t* Grass\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Tab\n",
+    "\n",
     "tabby_cat = \"\\tI'm tabbed in.\"\n",
+    "print(tabby_cat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Split\n",
+    "\n",
     "persian_cat = \"I'm split\\non a line.\"\n",
+    "print(persian_cat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Backslash\n",
     "backslash_cat = \"I'm \\\\ a \\\\ cat.\"\n",
+    "\n",
+    "print(backslash_cat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# List\n",
     "\n",
     "fat_cat = \"\"\"\n",
     "I'll do a list:\n",
@@ -160,10 +193,192 @@
     "\\t* Catnip\\n\\t* Grass\n",
     "\"\"\"\n",
     "\n",
-    "print(tabby_cat)\n",
-    "print(persian_cat)\n",
-    "print(backslash_cat)\n",
     "print(fat_cat)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6.4.3 Methods \n",
+    "\n",
+    "#### a. `.upper( )` and `.lower( )` \n",
+    "The .upper() and .lower() string methods are self-explanatory. Performing the .upper() method on a string converts all of the characters to uppercase, whereas the lower() method converts all of the characters to lowercase.\n",
+    "\n",
+    "For example: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# using .upper()\n",
+    "my_string1 = \"hello, world!\"\n",
+    "\n",
+    "print(my_string1.upper())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# using .lower()\n",
+    "\n",
+    "my_string2 = \"Hello, World!\"\n",
+    "my_string3 = \"HI, PYTHON!\"\n",
+    "\n",
+    "print(my_string2.lower())\n",
+    "print(my_string2.lower())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### b. `.count()`\n",
+    "\n",
+    "The <b>`.count()`</b> method adds up the number of times a character or sequence of characters appears in a string.\n",
+    "\n",
+    "For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "my_string4 = \"Oscar loves to google words that start with o's\"\n",
+    "my_string4.count(\"o\") "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On the example above, it didn't count the 'O' in Oscar, because it is in case sensitive, Meaning 'O' is different from 'o'."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### c. `.find()`\n",
+    "\n",
+    "We use <b>`.find()`</b> to search for a specific character/s in a string.\n",
+    "\n",
+    "For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Run the code\n",
+    "\n",
+    "my_string5 = \"On the other hand, Python is a great language.\"\n",
+    "my_string5.find(\"hand\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The results tell us that “hand” begins at the 13th position in the sequence."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### d. `.replace()`\n",
+    "\n",
+    "The method <b>`replace()`</b> returns a copy of the string in which the occurrences of old have been replaced with new, optionally restricting the number of replacements to max. \n",
+    "\n",
+    "##### Syntax:\n",
+    "`str.replace(old, new[, max])`\n",
+    "\n",
+    "##### Parameters:\n",
+    "- old -- This is old substring to be replaced.\n",
+    "\n",
+    "- new -- This is new substring, which would replace old substring.\n",
+    "\n",
+    "- max -- If this optional argument max is given, only the first count occurrences are replaced.\n",
+    "\n",
+    "##### Return Value:\n",
+    "This method returns a copy of the string with all occurrences of substring old replaced by new. If the optional argument max is given, only the first count occurrences are replaced.\n",
+    "\n",
+    "For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "str = \"this is string example....wow!!! this is really string\";\n",
+    "print(str.replace(\"wow\", \"amazing\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6.4.3 String Formatting \n",
+    "\n",
+    "The string format operator is unique to strings and makes up for the pack of having functions from C's printf() family. Following is a simple example −"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Beginner_2](./images/img_string_formatting.png)"
    ]
   }
  ],
