Updated the Built-in Functions

--- a/Beginner_2/5. Built-in Functions.ipynb
+++ b/Beginner_2/5. Built-in Functions.ipynb
@@ -4,34 +4,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5.1 [input()](https://docs.python.org/3.5/library/functions.html#input)\n",
+    "# Built-in Functions in Python 3\n",
     "\n",
-    "input([prompt])\n",
-    "\n",
-    "If the prompt argument is present, it is written to standard output without a trailing newline. The function then reads a line from input, converts it to a string (stripping a trailing newline), and returns that. When EOF is read, EOFError is raised.\n",
-    "\n",
-    "Example:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    ">>> s = input('--> ')  \n",
-    "--> Monty Python's Flying Circus\n",
-    ">>> s  \n",
-    "\"Monty Python's Flying Circus\""
+    "Listed below are most common built-in functions in Python 3:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If the readline module was loaded, then input() will use it to provide elaborate line editing and history features."
+    "## 5.1 [input( )](https://docs.python.org/3.5/library/functions.html#input)\n",
+    "\n",
+    "This is designed for accepting data directly from the user.\n",
+    "\n",
+    "The parameter inside the parentheses after input is important. It is a prompt indicating what is being requested. Without the prompt, the user would not know what was happening.\n",
+    "\n",
+    "Go ahead and run the code below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "input('Enter your name: ' )"
    ]
   },
   {
@@ -45,14 +44,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5.2 [print()](https://docs.python.org/3.5/library/functions.html#print)\n",
+    "## 5.2 [print()](https://docs.python.org/3.5/library/functions.html#print)\n",
     "\n",
-    "The print function can print an arbitrary number of values (\"value1, value2, ...\"), which are separated by commas. These values are separated by blanks.\n",
+    "If you want your program to display something, you can give explicit instructions with the <b>`print`</b> function. \n",
     "\n",
+    "The print function will print as strings everything in a comma-separated sequence of expressions, and it will separate the results with single blanks by default. \n",
     "\n",
-    "In the following example we can see two print calls. We are printing two values in both cases, i.e. a string and a float number.\n",
-    "\n",
-    "Example:"
+    "In the following example we can see two print calls. We are printing two values in both cases, i.e. a string and a float number:"
    ]
   },
   {
@@ -63,17 +61,16 @@
    },
    "outputs": [],
    "source": [
-    "a = 3.564\n",
-    "\n",
-    "print(\"a = \", a)\n",
-    "print(\"a = \\n\", a)"
+    "# Run the code to see the results:\n",
+    "a = 'Hello'\n",
+    "print(a)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can learn from the second print of the example that a blank between two values, i.e. \"a = \\textbackslash n\" and \"3.564\", is always printed, even if the output is continued in the following line. This is different to Python 2, as there will be no blank printed, if a new line has been started. It's possible to redefine the sepeerator between values by assigning an arbitrary string to the keyword parameter \"sep\", e.e. an empty string or a smiley:"
+    "It's possible to redefine the separator between values by assigning an arbitrary string to the keyword parameter <b>`\"sep\"`</b>:"
    ]
   },
   {
@@ -84,13 +81,15 @@
    },
    "outputs": [],
    "source": [
-    "print(\"a\",\"b\")\n",
+    "a = \"Hello\"\n",
+    "b = \"World\"\n",
     "\n",
-    "print(\"a\",\"b\",sep=\"\")\n",
+    "print(a,b)\n",
     "\n",
-    "print(192,168,178,42,sep=\".\")\n",
+    "print(a,b,sep=\"_\")\n",
     "\n",
-    "print(\"a\",\"b\",sep=\":-)\") "
+    "print(a,b,sep=\"...\")\n",
+    "print(192,168,178,42,sep=\".\")"
    ]
   },
   {
@@ -154,18 +153,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 5.3 [type()](https://docs.python.org/3.5/library/functions.html#type)\n",
+    "## 5.3 [type()](https://docs.python.org/3.5/library/functions.html#type)\n",
     "\n",
-    "This returns the type of an object.\n",
-    "\n",
-    "For example:\n"
+    "This returns the type of an object. For example:"
    ]
   },
   {
@@ -194,20 +184,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "   "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 5.5 Casting\n",
+    "## 5.4 Casting\n",
     "\n",
     "Sometimes, you may need to perform conversions between the built-in types. To convert between types, you simply use the type name as a function. <b>Casting</b> is when you convert a variable value from one type to another. \n",
     "\n",
     "There are several built-in functions to perform conversion from one data type to another. These functions return a new object representing the converted value.\n",
     "\n",
-    "#### 5.5.1 Converting String into a Proper Number"
+    "### 5.4.1 Converting String into a Proper Number"
    ]
   },
   {
@@ -227,7 +210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On the example above, we just printed the type of variable `x` which resulted to a string. To convert a string into an integer:"
+    "On the example above, we just printed the type of variable <b>`x`</b> which resulted to a string. To convert a string into an integer:"
    ]
   },
   {
@@ -256,7 +239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There's also another very common one which is `float()`:"
+    "There's also another very common one which is <b>`float()`</b>:"
    ]
   },
   {
